# Data-Structures

./: .gitignore  CMakeLists.txt  Node.h  README.md  soluzioni-tracce-esami.md  tester.cpp
BST/: BinarySearchTree.h  IBinarySearchTree.h
BinaryTree/: BinaryTree.h  IBinaryTree.h
Dictionary/: Dictionary.h  IDictionary.h
Graph/: Graph.h  IGraph.h
Lib/: random.h
LinkedList/: ArrayLinkedList.h  ILinkedList.h  ISortedLinkedList.h  LinkedList.h  SortedLinkedList.h
PriorityQueue/: IPriorityQueue.h  PriorityQueue.h
Queue/: ArrayQueue.h  IQueue.h  Queue.h
Set/: ISet.h  Set.h
SortedLinkedList/: ISortedLinkedList.h  SortedLinkedList.h
Stack/: ArrayStack.h  IStack.h  Stack.h
Tree/: ITree.h  Tree.h
soluzioni-tracce-esami/: bst.h  eo_strings.h  even_father.h  zero_one_binary_tree.h
